# DarkWatt

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  index.html  manifest.json  package.json  tsconfig.json  types.d.ts
extension/: README.md  biome.json  components.json  manifest_cr.json  manifest_ff.json  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  types.d.ts
extension/config/: build.ts  cwd.ts  pack.ts
extension/js/: background.js  content.js  popup.html  popup.js  storage.js
extension/js/background/: capture.js  display.js  sampling.js  savings.js  stats.js
extension/js/utils/: logger.js
extension/js/wasm/: LICENSE  wasm_mod.js  wasm_mod_bg.wasm
extension/public/: index.html  main.css  manifest.json  manifest_cr.json  manifest_ff.json  ui.html
extension/src/: background.js  background.ts  content.js  content.ts  definitions.d.ts  definitions.ts  popup.html  popup.js  storage.js
extension/src/__tests__/: theme.test.ts
extension/src/background/: capture.js  capture.ts  display.js  display.ts  index.ts  messenger.ts  sampling.js  sampling.ts  savings.js  stats.js
extension/src/background_modules/: capture.ts  display.ts  sampling.ts  savings.ts  stats.ts
extension/src/inject/: color-scheme-watcher.ts  index.ts
extension/src/models/: stats.ts
extension/src/popup/: App.tsx  api.ts  index.tsx
extension/src/storage/: storage.ts
extension/src/ui/: App.tsx
extension/src/utils/: capture.ts  color.ts  display.ts  logger.js  logger.ts  media-query.ts  sampling.ts  savings.ts  (+8 more)
public/: index.html  manifest.json
src/: lib.rs
src/scripts/: content.ts  script.ts
wasm_mod/: Cargo.toml
wasm_mod/src/: constants.rs  lib.rs  pixel.rs  utils.rs
wasm_mod/tests/: web.rs
(+19 files in other folders)
